--- a/Kubernetes/mongodb-service.yaml
+++ b/Kubernetes/mongodb-service.yaml
@@ -1,8 +1,9 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: mongodb
+  name: mongodb-service
 spec:
+  type: LoadBalancer
   selector:
     app: mongodb
   ports:
