build: ui build

--- a/AtlasGoogleCloud/AtlasGoogleCloud/Info.plist
+++ b/AtlasGoogleCloud/AtlasGoogleCloud/Info.plist
@@ -12,6 +12,7 @@
 	<array>
 		<string>EBGaramond-Regular.otf</string>
 		<string>EBGaramond-Italic.otf</string>
+		<string></string>
 	</array>
 </dict>
 </plist>
